# MidiJoystick

./: .gitignore  CHANGELOG.org  CMakeLists.txt  LICENSE  Makefile  README.org  config.c  config.dot  config.h  config.rl  explain_config.c  glue.c  glue.h  input.conf  joystick.c  joystick.h  main.c  main.cpp  mapping.c  mapping.h  midicompendium.org  midijack.c  midijack.h  midijoystick.scm  midiprotocol.c  midiprotocol.h
